--- a/site-template/2021/01/01/template/index.html
+++ b/site-template/2021/01/01/template/index.html
@@ -5,8 +5,8 @@
 	
 	<!--    SITE BUILD INFORMATION    -->
 <!--    Date built:    2021-04-26    -->
-<!--    Time built:    22:30    -->
-<!--    Site URL:    http://localhost:4000    -->
+<!--    Time built:    22:35    -->
+<!--    Site URL:    https://www.johnpe.art    -->
 <!--    Site base URL:    /email-signatures    -->
 
 	<meta charset="utf-8">
@@ -26,14 +26,14 @@
 	<meta name="googlebot" content="index,follow"><!-- Google Specific -->
 	
 	<!-- Base URLS, duplicate URLs and feeds -->
-	<meta name="url" content="http://localhost:4000/email-signatures">
-	<base href="http://localhost:4000/email-signatures/site-template/2021/01/01/template/">
+	<meta name="url" content="https://www.johnpe.art/email-signatures">
+	<base href="https://www.johnpe.art/email-signatures/site-template/2021/01/01/template/">
 	<!-- Links to top level resource in an hierarchical structure -->
-	<link rel="index" href="http://localhost:4000/email-signatures">
-	<link rel="canonical" href="http://localhost:4000/email-signatures/site-template/2021/01/01/template/">
-	<link rel="alternate" href="http://localhost:4000/email-signatures/feed.xml" type="application/rss+xml" title="Email signature builder">
+	<link rel="index" href="https://www.johnpe.art/email-signatures">
+	<link rel="canonical" href="https://www.johnpe.art/email-signatures/site-template/2021/01/01/template/">
+	<link rel="alternate" href="https://www.johnpe.art/email-signatures/feed.xml" type="application/rss+xml" title="Email signature builder">
 	<!-- Links to a document that describes a collection of records, documents, or other materials of historical interest. -->
-	<link rel="archives" href="http://localhost:4000/email-signatures/archives">
+	<link rel="archives" href="https://www.johnpe.art/email-signatures/archives">
 	
 	<!-- Gives information about the author -->
 	<link rel="me" href="https://twitter.com/johnpeart" type="text/html">
@@ -44,14 +44,14 @@
 <link rel="me" href="https://mastodon.social/@johnpeart" type="text/html">
 	
 	<!-- Facebook Open Graph settings -->
-	<meta property="og:url" 				content="http://localhost:4000/email-signatures/site-template/2021/01/01/template/">
+	<meta property="og:url" 				content="https://www.johnpe.art/email-signatures/site-template/2021/01/01/template/">
 
 <meta property="og:type" 			content="website" />
 
 <meta property="og:title" 			content="Post template">
 
 
-<meta property="og:image" 			content="http://localhost:4000/email-signatures/template.png">
+<meta property="og:image" 			content="https://www.johnpe.art/email-signatures/template.png">
 
 
 <meta property="og:image:width" 		content="1200">
@@ -77,14 +77,14 @@
 
 <meta name="twitter:creator" 		content="@johnpeart">
 
-<meta name="twitter:url" 			content="http://localhost:4000/email-signatures/site-template/2021/01/01/template/">
+<meta name="twitter:url" 			content="https://www.johnpe.art/email-signatures/site-template/2021/01/01/template/">
 
 <meta name="twitter:title" 			content="Post template">
 
 <meta name="twitter:description" 	content="A short description of the post">
 
 
-<meta name="twitter:image" 			content="http://localhost:4000/email-signatures/template.png">
+<meta name="twitter:image" 			content="https://www.johnpe.art/email-signatures/template.png">
 
 <meta name="twitter:image:alt" 		content="Post template">
 	
@@ -92,20 +92,20 @@
 	<meta itemprop="name" content="Post template">
 <meta itemprop="description" content="A short description of the post">
 
-<meta itemprop="image" content="http://localhost:4000/email-signatures/template.png">
+<meta itemprop="image" content="https://www.johnpe.art/email-signatures/template.png">
 
 	
 	<!-- Favicons -->
 	<!-- Place favicon.ico in the root directory - no tag necessary -->
 	<meta name="theme-color" content="#009fe3">
-	<link rel="icon" href="http://localhost:4000/email-signatures/assets/images/site/favicon.svg">
-	<link rel="mask-icon" href="http://localhost:4000/email-signatures/assets/images/site/favicon-pinned-svg.svg" color="#009fe3">
-	<link rel="apple-touch-icon" href="http://localhost:4000/email-signatures/assets/images/site/favicon-large-png.png">
+	<link rel="icon" href="https://www.johnpe.art/email-signatures/assets/images/site/favicon.svg">
+	<link rel="mask-icon" href="https://www.johnpe.art/email-signatures/assets/images/site/favicon-pinned-svg.svg" color="#009fe3">
+	<link rel="apple-touch-icon" href="https://www.johnpe.art/email-signatures/assets/images/site/favicon-large-png.png">
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="http://localhost:4000/email-signatures/assets/styles/styles.css">
+	<link rel="stylesheet" href="https://www.johnpe.art/email-signatures/assets/styles/styles.css">
 		
-	<script type="text/javascript" src="http://localhost:4000/email-signatures/assets/scripts/scripts.js" async></script>
+	<script type="text/javascript" src="https://www.johnpe.art/email-signatures/assets/scripts/scripts.js" async></script>
 	
 
 </head>
