--- a/site-template/2021/01/01/template/index.html
+++ b/site-template/2021/01/01/template/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
 
   <head prefix="og: http://ogp.me/ns#">
-	
+
 	<!--    SITE BUILD INFORMATION    -->
-<!--    Date built:    2021-04-27    -->
-<!--    Time built:    18:47    -->
+<!--    Date built:    2021-05-20    -->
+<!--    Time built:    18:43    -->
 <!--    Site URL:    https://www.johnpe.art    -->
 <!--    Site base URL:    /email-signatures    -->
 
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-	
+
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<title>Post template</title>
-	
+
 	<!-- Short description of the page (limit to 150 characters) -->
 	<!-- In *some* situations this description is used as a part of the snippet shown in the search results. -->
 	<meta name="description" content="I’m John Peart. I’m a policy professional with an interest in technology, services and diversity. I write about all sorts of things, and I build things in code." />
 	<meta name="author" content="John Peart" />
-	
+
 	<!-- Control the behavior of search engine crawling and indexing -->
 	<meta name="robots" content="index,follow"><!-- All Search Engines -->
 	<meta name="googlebot" content="index,follow"><!-- Google Specific -->
-	
+
 	<!-- Base URLS, duplicate URLs and feeds -->
 	<meta name="url" content="https://www.johnpe.art/email-signatures">
 	<base href="https://www.johnpe.art/email-signatures/site-template/2021/01/01/template/">
@@ -34,7 +34,7 @@
 	<link rel="alternate" href="https://www.johnpe.art/email-signatures/feed.xml" type="application/rss+xml" title="Email signature builder">
 	<!-- Links to a document that describes a collection of records, documents, or other materials of historical interest. -->
 	<link rel="archives" href="https://www.johnpe.art/email-signatures/archives">
-	
+
 	<!-- Gives information about the author -->
 	<link rel="me" href="https://twitter.com/johnpeart" type="text/html">
 
@@ -42,7 +42,7 @@
 
 
 <link rel="me" href="https://mastodon.social/@johnpeart" type="text/html">
-	
+
 	<!-- Facebook Open Graph settings -->
 	<meta property="og:url" 				content="https://www.johnpe.art/email-signatures/site-template/2021/01/01/template/">
 
@@ -51,7 +51,7 @@
 <meta property="og:title" 			content="Post template">
 
 
-<meta property="og:image" 			content="https://www.johnpe.art/email-signatures/template.png">
+<meta property="og:image" 			content="/template.png">
 
 
 <meta property="og:image:width" 		content="1200">
@@ -69,7 +69,7 @@
 <meta property="article:author" 		content="John Peart" />
 
 <meta property="article:publisher" 	content="John Peart" />
-	
+
 	<!-- Twitter Cards settings -->
 	<meta name="twitter:card" 			content="summary_large_image">
 
@@ -84,17 +84,17 @@
 <meta name="twitter:description" 	content="A short description of the post">
 
 
-<meta name="twitter:image" 			content="https://www.johnpe.art/email-signatures/template.png">
+<meta name="twitter:image" 			content="/template.png">
 
 <meta name="twitter:image:alt" 		content="Post template">
-	
+
 	<!-- Schema.org settings -->
 	<meta itemprop="name" content="Post template">
 <meta itemprop="description" content="A short description of the post">
 
-<meta itemprop="image" content="https://www.johnpe.art/email-signatures/template.png">
+<meta itemprop="image" content="/template.png">
 
-	
+
 	<!-- Favicons -->
 	<!-- Place favicon.ico in the root directory - no tag necessary -->
 	<meta name="theme-color" content="#009fe3">
@@ -104,8 +104,10 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://www.johnpe.art/email-signatures/assets/styles/styles.css">
-		
+
 	<script type="text/javascript" src="https://www.johnpe.art/email-signatures/assets/scripts/scripts.js" async></script>
+	
+	
 	
 
 </head>
